<resources>

    <string name="app_name">蓝牙4.0</string>
    <string name="ble_not_supported">你的设备不支持蓝牙4.0</string>
    <string name="title_devices">扫描BLE设备</string>
    <string name="error_bluetooth_not_supported">不支持蓝牙功能</string>
    <string name="unknown_device">未知设备</string>

    <!-- Menu items -->
    <string name="sBegintest">开始测试</string>
    <string name="sStoptest">停止测试</string>
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描设备</string>
    <string name="menu_stop">停止扫描</string>
    <string name="sSure">确定</string>
    <string name="sCancle">取消</string>
    <string name="smart_follow_txt_num0">0</string>
    <string name="smart_follow_txt_num1">1</string>
    <string name="smart_follow_txt_num2">2</string>
    <string name="smart_follow_txt_num3">3</string>
    <string name="smart_follow_txt_num4">4</string>
    <string name="smart_follow_txt_num5">5</string>
    <string name="smart_follow_txt_num6">6</string>
    <string name="smart_follow_txt_num7">7</string>
    <string name="smart_follow_txt_num8">8</string>
    <string name="smart_follow_txt_num9">9</string>
    <string name="smart_follow_txt_delete">删除</string>
    <string name="smart_follow_txt_clear">清除</string>
    <string name="smart_follow_txt_select">确认</string>

</resources>